<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="advanced">Advanced</string>
    <string name="x_against_y">%1$s against %2$s</string>
    <string name="alphabetical_order">Alphabetical Order</string>
    <string name="app_authors">Charles Madere and Timothy Choi</string>
    <string name="app_written_by">App written by</string>
    <string name="are_you_sure_you_dont_want_to_select_your_tag">Are you sure that you don\'t want to select your tag?</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="change_region">Change region</string>
    <string name="change_sync_settings">Change sync settings</string>
    <string name="charles_madere">Charles Madere</string>
    <string name="chronologically">Chronologically</string>
    <string name="clear">Clear</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_console">Clear console</string>
    <string name="close">Close</string>
    <string name="close_drawer">Close drawer</string>
    <string name="clear_log">Clear log</string>
    <string name="clear_network_cache">Clear network cache</string>
    <string name="console">Console</string>
    <string name="credits">Credits</string>
    <string name="date">Date</string>
    <string name="debug">Debug</string>
    <string name="developer">Developer</string>
    <string name="enable_or_disable_sync">Enable or disable sync</string>
    <string name="enable_sync">Enable sync</string>
    <string name="entrants">Entrants</string>
    <string name="error">Error</string>
    <string name="error_">Error!</string>
    <string name="error_fetching_head_to_head_matches">Error fetching head-to-head matches!</string>
    <string name="error_fetching_x_matches">Error fetching %s\'s matches!</string>
    <string name="error_fetching_players">Error fetching players!</string>
    <string name="error_fetching_rankings">Error fetching rankings!</string>
    <string name="error_fetching_regions">Error fetching regions!</string>
    <string name="error_fetching_tournament">Error fetching tournament!</string>
    <string name="error_fetching_tournaments">Error fetching tournaments!</string>
    <string name="fetching_regions">Fetching regions…</string>
    <string name="gar_pr">GAR PR</string>
    <string name="gar_pr_welcome_text">GAR PR is a ranking system and tournament results archive
        for Super Smash Brothers Melee tournaments. Watch players rise and fall as the game
        progresses. <![CDATA[<i>Where do you stand?</i>]]></string>
    <string name="gar_pr_x">GAR PR: %s</string>
    <string name="general">General</string>
    <string name="generate_notification">Generate notification</string>
    <string name="go">Go</string>
    <string name="google_play_services_unavailable">Google Play services unavailable</string>
    <string name="go_">Go!</string>
    <string name="header">Header</string>
    <string name="head_to_head">Head to Head</string>
    <string name="hello">Hello</string>
    <string name="hello_">Hello!</string>
    <string name="hello_world">Hello, World!</string>
    <string name="last_rankings_update">Last rankings update</string>
    <string name="last_sync">Last sync</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="log_console">Log console</string>
    <string name="log_console_title_case">Log Console</string>
    <string name="log_console_description">Displays log messages that would normally only be
        visible via Android logcat.</string>
    <string name="lose">Lose</string>
    <string name="loss">Loss</string>
    <string name="lost">Lost</string>
    <string name="match">Match</string>
    <string name="matches">Matches</string>
    <string name="misc">Misc</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="next">Next</string>
    <string name="next_">Next!</string>
    <string name="no">No</string>
    <string name="norcal">Norcal</string>
    <string name="ok">OK</string>
    <string name="okay">Okay</string>
    <string name="only_sync_on_wifi">Only sync on wifi</string>
    <string name="only_sync_when_charging">Only sync when charging</string>
    <string name="open_drawer">Open drawer</string>
    <string name="open_source_on_github">Open source on GitHub</string>
    <string name="other">Other</string>
    <string name="periodic_sync">Periodic Sync</string>
    <string name="periodic_sync_is_turned_off">Periodic sync is turned off</string>
    <string name="periodic_sync_is_on">Periodic sync is on</string>
    <string name="period_sync_requires_google_play_services">Periodic sync requires Google Play
        services in order to function. Click here to try to resolve the issues with your Google
        Play services installation.</string>
    <string name="player">Player</string>
    <string name="players">Players</string>
    <string name="player_x_region_y">Player: (%1$s) Region: (%2$s)</string>
    <string name="pound_sign">#</string>
    <string name="quit">Quit</string>
    <string name="ranking">Ranking</string>
    <string name="rankings">Rankings</string>
    <string name="x_rankings_have_been_updated">%s rankings have been updated!</string>
    <string name="rank_order">Rank Order</string>
    <string name="rank_x">Rank %d</string>
    <string name="rank_x_rating_y">rank %1$d, rating %2$f</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="refresh">Refresh</string>
    <string name="region">Region</string>
    <string name="regions">Regions</string>
    <string name="reverse_chronologically">Reverse Chronologically</string>
    <string name="save">Save</string>
    <string name="save_">Save!</string>
    <string name="search">Search</string>
    <string name="search_matches">Search matches…</string>
    <string name="search_players">Search players…</string>
    <string name="search_tournaments">Search tournaments…</string>
    <string name="selected_tag">Selected tag</string>
    <string name="select_a_player_to_view">Select a player</string>
    <string name="select_your_region">Select your region</string>
    <string name="select_your_tag">Select your tag</string>
    <string name="server_backend_by_ivan_van">Server backend by Ivan Van</string>
    <string name="settings">Settings</string>
    <string name="skip">Skip</string>
    <string name="skip_">Skip!</string>
    <string name="share">Share</string>
    <string name="share_to">Share to</string>
    <string name="show">Show</string>
    <string name="show_">Show…</string>
    <string name="show_all">Show All</string>
    <string name="show_loses">Show Loses</string>
    <string name="show_wins">Show Wins</string>
    <string name="sort">Sort</string>
    <string name="sort_">Sort…</string>
    <string name="sort_chronologically">Sort Chronologically</string>
    <string name="sort_reverse_chronologically">Sort Reverse Chronologically</string>
    <string name="swipe_to_refresh_and_try_again">Swipe to refresh and try again.</string>
    <string name="sync">Sync</string>
    <string name="syncing">Syncing</string>
    <string name="syncing_">Syncing…</string>
    <string name="sync_description">About once a day, the app will check the GAR PR website for a new
        version of your current region\'s roster. If a new roster is found, it\'ll be automatically
        downloaded, and a notification will appear in your device\'s notification center.</string>
    <string name="sync_has_yet_to_occur">Sync has yet to occur</string>
    <string name="tag_and_message"><b>%1$s</b> %2$s</string>
    <string name="timothy_choi">Timothy Choi</string>
    <string name="title">Title</string>
    <string name="tournament">Tournament</string>
    <string name="tournaments">Tournaments</string>
    <string name="updated_x">Updated %s</string>
    <string name="version_information">Version information</string>
    <string name="view">View</string>
    <string name="view_">View…</string>
    <string name="view_first_player">View first player</string>
    <string name="view_second_player">View second player</string>
    <string name="view_x">View %s</string>
    <string name="warning">Warning</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_">Welcome!</string>
    <string name="will_sync_on_any_data_connection">Will sync on any data connection</string>
    <string name="will_sync_regardless_of_being_plugged_in_or_not">Will sync regardless of being plugged in or not</string>
    <string name="will_only_sync_if_connected_to_wifi">Will only sync if connected to wifi</string>
    <string name="will_only_sync_if_plugged_in">Will only sync if plugged in</string>
    <string name="win">Win</string>
    <string name="won">Won</string>
    <string name="x_bold_colon_y"><![CDATA[<b>%1$s</b>]]>: %2$s</string>
    <string name="x_bold_colon_y_paren_z"><![CDATA[<b>%1$s</b>]]>: %2$s (%3$s)</string>
    <string name="x_build_y">%1$s (build %2$d)</string>
    <string name="x_colon_y">%1$s: %2$y</string>
    <string name="x_em_dash_y">%1$s &#8212; %2$s</string>
    <string name="x_is_ranked_y_on_gar_pr_z">%1$s is ranked %2$d on GAR PR %3$s</string>
    <string name="x_on_gar_pr">%s on GAR PR</string>
    <string name="x_on_gar_pr_y">%1$s on GAR PR %2$s</string>
    <string name="w_on_x_has_y_players_and_z_matches">%1$s on %2$s has %3$d players and %4$d matches</string>
    <string name="x_paren_y">%1$s (%2$s)</string>
    <string name="x_viewing_y">%1$s (viewing %2$s)</string>
    <string name="x_vs_y">%1$s vs %2$s</string>
    <string name="x_vs_y_on_gar_pr_z">%1$s vs %2$s on GAR PR %3$s</string>
    <string name="w_vs_x_wins_losses">%1$s vs %2$s: wins %3$d, losses %4$d</string>
    <string name="x_y">%1$s %2$s</string>
    <string name="yes">Yes</string>
    <string name="youre_x_from_y_ready">You\'re %1$s from %2$s. Ready?</string>

</resources>
