<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_people"
            android:id="@+id/navigation_view_menu_rankings"
            android:title="@string/rankings" />
        <item
            android:icon="@drawable/ic_star"
            android:id="@+id/navigation_view_menu_tournaments"
            android:title="@string/tournaments" />
        <item
            android:id="@+id/navigation_view_menu_misc"
            android:title="@string/miscellaneous">
            <menu>
                <item
                    android:icon="@drawable/ic_settings"
                    android:id="@+id/navigation_view_menu_settings"
                    android:title="@string/settings" />
                <item
                    android:icon="@drawable/ic_about"
                    android:id="@+id/navigation_view_menu_about"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>
