<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/icon_search"
        android:id="@+id/activity_rankings_menu_search"
        android:title="@string/search"
        android:visible="false"
        compat:actionViewClass="android.support.v7.widget.SearchView"
        compat:showAsAction="collapseActionView|ifRoom" />
    <item
        android:icon="@drawable/icon_sort"
        android:id="@+id/activity_rankings_menu_sort"
        android:title="@string/sort"
        android:visible="false"
        compat:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/activity_rankings_menu_sort_alphabetical"
                android:title="@string/alphabetical_order" />
            <item
                android:enabled="false"
                android:id="@+id/activity_rankings_menu_sort_rank"
                android:title="@string/rank_order" />
        </menu>
    </item>
</menu>
